# otus-cpp-basics_lesson_02

./: CMakeLists.txt  hello_world.cpp  todo_move_me_out.cpp  todo_move_me_out.h
